--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
-Author: W3layouts
-Author URL: http://w3layouts.com
+Author: Mr E.
+Author URL: http://howcily.github.io
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
