granular re-do of all index.html
line by line analysis of how this page is being built to edit and see which containers exist for all div elements associated in the parallax build

basically breaking down sections of page into each div element class

--- a/banner.html
+++ b/banner.html
@@ -1,51 +1,31 @@
-<div class="w3_banner">
-  <div class="container">
-    <div class="slider">
-      <div class="callbacks_container">
-         <ul class="rslides callbacks callbacks1" id="slider4">
-          <li>  
+<div class="w3_banner"><!-- start banner-->
+  <div class="container"><!-- start container-->
+    <div class="slider"><!-- Start Slider -->
+      <div class="callbacks_container"><!-- start callbacks container-->
+        <ul class="rslides callbacks callbacks1" id="slider4">
+          <li>
             <div class="banner_text_w3layouts">
-              <h3>Maur egetire sit tmae.</h3>
+              <h3>Healine 1.</h3>
               <span> </span>
-              <p>Casp Eestibulum </p>
+              <p>smaller sub headline </p>
             </div>
           </li>
-           <li>  
+          <li>
             <div class="banner_text_w3layouts">
-              <h3>Eget Integer sit amet.</h3>
+              <h3>Healine 2.</h3>
               <span> </span>
-              <p>Rlua vestibulum </p>
+              <p>smaller sub headline </p>
             </div>
           </li>
-           <li>  
+          <li>
             <div class="banner_text_w3layouts">
-              <h3>Amet sitamet tus libe.</h3>
+              <h3>Healine 3.</h3>
               <span> </span>
-              <p>Cras vestibulum </p>
+              <p>smaller sub headline </p>
             </div>
           </li>
         </ul>
-      </div>
-      <script src="js/responsiveslides.min.js"></script>
-      <script>
-      // You can also use "$(window).load(function() {"
-      $(function () {
-        // Slideshow 4
-        $("#slider4").responsiveSlides({
-        auto: true,
-        pager:true,
-        nav:true,
-        speed: 500,
-        namespace: "callbacks",
-        before: function () {
-          $('.events').append("<li>before event fired.</li>");
-        },
-        after: function () {
-          $('.events').append("<li>after event fired.</li>");
-        }
-        });
-      });
-     </script>
-     </div>
-  </div>
-</div>
+      </div><!-- end callbacks container-->
+    </div><!-- End Slider -->
+  </div><!-- end container-->
+</div><!-- end banner-->
