--- a/toolTips.html
+++ b/toolTips.html
@@ -1,14 +1,21 @@
+<!-- Container for blurb popup from read more button in section-->
 <div class="tooltip-content">
   <div class="modal fade features-modal" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h2 class="modal-title text-center">candid</h2>
+          <h2 class="modal-title text-center">Ron Espinoza</h2>
         </div>
         <div class="modal-body">
+          <!-- A cool profile photo goes here-->
           <img src="images/7.jpg" alt="image">
-          <p>Fusce et congue nibh, ut ullamcorper magna. Donec ac massa tincidunt, fringilla sapien vel, tempus massa. Vestibulum felis leo, tincidunt sit amet tristique accumsan. In vitae dapibus metus. Donec nec massa non nulla mattis aliquam egestas et mi.</p>
+          <p><!-- Read more about me and my creative side-->
+            A paragraph or blurb detailing my creative side.
+            Or even something about something you know.
+            Or even something about something you know.
+            Or even something about something you know.
+          </p>
         </div>
       </div>
     </div>
