--- a/about.html
+++ b/about.html
@@ -1,14 +1,20 @@
-<div class="about_agileinfo" id="about">
+<div class="about_agileinfo" id="about"><!-- hyperlink #about connects to this id-->
   <div class="container">
-      <h3 class="title">about us</h3>
+    <h3 class="title">About Section</h3>
     <div class="about_main">
       <div class="col-md-6 col-sm-6 col-xs-6 about_agileits"></div>
       <div class="col-md-6 col-sm-6 col-xs-6 about_text_w3l">
-        <h4>Lorem Ipsum</h4>
-      <P>Auris eget vestibulum augue. Integer sit amet tellus libero.Nam ac enim ut velit dictum congue. Integer vitae elit in risus laoreet porttitor non nec enim. Donec nec sapien odio. Nullam dictum, elit maximus vulputate venenatis, neque velit tincidunt mauris, ac facilisis ligula mi et neque. Vivamus ut felis sem. In eget diam lorem. Aliquam tincidunt. Aliquam venenatis  non orci egestas cursus. Phasellus venenatis blandit odio, in tincidunt ex trist.Integer sit amet tellus libero.Nam ac enim ut velit dictum congue. Integer vitae elit in risus laoreet porttitor non nec enim.
-      </P>
+        <h4>Mr E. discography</h4>
+        <p>
+          This paragraph details things about my career and stuff.
+          This paragraph details things about my career and stuff.
+          This paragraph details things about my career and stuff.
+          This paragraph details things about my career and stuff.
+          This paragraph details things about my career and stuff.
+          This paragraph details things about my career and stuff.
+        </p>
       </div>
       <div class="clearfix"></div>
-    </div>    
+    </div>
   </div>
- </div> 
+</div>
