--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,13 @@
 <div class="contact-w3-agileits" id="contact">
   <div class="contact-main">
-    <div class="col-md-7 col-sm-7 col-xs-7 contact-right-w3l">
-      <form action="#" method="post">
-        <input type="text" class="name" name="name" placeholder="First Name" required="">
-        <input type="text" class="name" name="name" placeholder="Last Name" required="">
-        <input type="email" class="name" name="name" placeholder="Email" required="">
-        <input type="text" class="name" name="name" placeholder="Subject" required="">
-        <textarea placeholder="Your Message" required=""></textarea>
-        <input type="submit" value="SEND MESSAGE">
-      </form>
-    </div>
     <div class="col-md-5 col-sm-5 col-xs-5 contact-left-w3ls">
       <div class="mail contact-grid-agileinfo">
         <div class="col-md-1 col-sm-2 col-xs-2 contact-icon-wthree">
           <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
         </div>
         <div class="col-md-11 col-sm-9 col-xs-9 contact-text-agileinfo">
-          <h4>Mail us</h4>
-          <p><a href="mailto:info@example.com">info@example.com</a></p>
+          <h4>Email me</h4>
+          <p><a href="mailto:howcilly@gmail.com">howcilly@gmail.com</a></p>
         </div>
         <div class="clearfix"></div>
       </div>
@@ -26,8 +16,8 @@
           <span class="glyphicon glyphicon-phone" aria-hidden="true"></span>
         </div>
         <div class="col-md-11 col-sm-9 col-xs-9 contact-text-agileinfo">
-          <h4>Call us</h4>
-          <p>+18044261149</p>
+          <h4>Call me</h4>
+          <p>+1 (000) 000-1111</p>
         </div>
         <div class="clearfix"></div>
       </div>
@@ -36,8 +26,10 @@
           <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
         </div>
         <div class="col-md-11 col-sm-9  col-xs-9 contact-text-agileinfo">
-          <h4>Visit us</h4>
-          <p>Stir vally,New york,U.S.A</p>
+          <h4>Local to</h4>
+          <p>
+            Dynamic from current browser location
+          </p>
         </div>
         <div class="clearfix"></div>
       </div>
