--- a/gallery.html
+++ b/gallery.html
@@ -1,67 +1,67 @@
 <div class="gallery_wthree" id="gallery">
   <div class="container">
-       <h3 class="title">gallery</h3>
-     <div class="gallery_grid agileits_w3layouts">
-       <div class="col-md-6  col-sm-6 col-xs-6 grid_w3">
-       <div class="grid-1">
-         <a class="cm-overlay" href="images/2.jpg">
-           <img src="images/2.jpg" alt=" " class="img-responsive" />
+    <h3 class="title">Repo List</h3>
+    <div class="gallery_grid agileits_w3layouts">
+      <div class="col-md-6  col-sm-6 col-xs-6 grid_w3">
+        <div class="grid-1">
+          <a class="cm-overlay" href="images/2.jpg">
+            <img src="images/2.jpg" alt=" " class="img-responsive" />
             <div class="w3agile-text w3agile-text-smal1">
-             <h5>Snap shot</h5>
-           </div>
-         </a>
-       </div>
+              <h5>pop up label</h5>
+            </div>
+          </a>
+        </div>
         <div class="sub_grid gallery_w3l">
-            <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-c grid_w3l">
-             <a class="cm-overlay" href="images/14.jpg">
-               <img src="images/14.jpg" alt=" " class="img-responsive" />
-               <div class="w3agile-text w3agile-text-small">
-                 <h5>Snap shot</h5>
-                   </div>
-             </a>
-           </div>
-            <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-b grid_w3l">
-              <a class="cm-overlay" href="images/13.jpg">
-               <img src="images/13.jpg" alt=" " class="img-responsive" />
-               <div class="w3agile-text w3agile-text-smal1">
-                 <h5>Snap shot</h5>
-               </div>
-             </a>
-           </div>
-            <div class="clearfix"></div>
-        </div>  
-         </div>
-     <div class="col-md-6 col-sm-6 col-xs-6 grid_w3">
+          <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-c grid_w3l">
+            <a class="cm-overlay" href="images/14.jpg">
+              <img src="images/14.jpg" alt=" " class="img-responsive" />
+              <div class="w3agile-text w3agile-text-small">
+                <h5>pop up label</h5>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-b grid_w3l">
+            <a class="cm-overlay" href="images/13.jpg">
+              <img src="images/13.jpg" alt=" " class="img-responsive" />
+              <div class="w3agile-text w3agile-text-smal1">
+                <h5>pop up label</h5>
+              </div>
+            </a>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+      <div class="col-md-6 col-sm-6 col-xs-6 grid_w3">
         <div class="sub_grid">
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-c grid_w3l">
-                 <a class="cm-overlay" href="images/15.jpg">
-             <img src="images/15.jpg" alt=" " class="img-responsive" />
-             <div class="w3agile-text w3agile-text-small">
-               <h5>Snap shot</h5>
-             </div>
-           </a>
+            <a class="cm-overlay" href="images/15.jpg">
+              <img src="images/15.jpg" alt=" " class="img-responsive" />
+              <div class="w3agile-text w3agile-text-small">
+                <h5>pop up label</h5>
+              </div>
+            </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-d grid_w3l">
-           <a class="cm-overlay" href="images/16.jpg">
-             <img src="images/16.jpg" alt=" " class="img-responsive" />
-             <div class="w3agile-text w3agile-text-smal1">
-               <h5>Snap shot</h5>
-             </div>
-           </a>
-         </div>
-          <div class="clearfix"></div>
+            <a class="cm-overlay" href="images/16.jpg">
+              <img src="images/16.jpg" alt=" " class="img-responsive" />
+              <div class="w3agile-text w3agile-text-smal1">
+                <h5>pop up label</h5>
+              </div>
+            </a>
           </div>
-         <div class="grid-1 grid-2">
-         <a class="cm-overlay" href="images/7.jpg">
-           <img src="images/7.jpg" alt=" " class="img-responsive" />
-           <div class="w3agile-text w3agile-text-smal1">
-               <h5>Snap shot</h5>
-           </div>
-         </a>
-         </div>
+          <div class="clearfix"></div>
+        </div>
+        <div class="grid-1 grid-2">
+          <a class="cm-overlay" href="images/7.jpg">
+            <img src="images/7.jpg" alt=" " class="img-responsive" />
+            <div class="w3agile-text w3agile-text-smal1">
+                <h5>pop up label</h5>
+            </div>
+          </a>
+        </div>
         <div class="clearfix"></div>
-     </div>
-     <div class="clearfix"></div>
-     </div>  
- </div>
- </div>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
+</div>
