--- a/home.html
+++ b/home.html
@@ -1,55 +1,57 @@
 <div class="home_ w3layouts">
   <div class="home_grids_w3">
-   <div class="home_main">
+    <div class="home_main">
       <div class="col-md-7 col-sm-7 col-xs-7 img1 img-grid">
         <div class="img_text_w3ls text-center">
-         <h4>Eget Integer sit amet.</h4>
-         <span> </span>
-         <p>Ras Bestibulum </p>
-       </div>
-     </div>
-     <div class="col-md-5 img2 col-sm-5 col-xs-5 img-grid">
-         <div class="img_text_w3ls text-center">
-         <h4>Eget Integer sit amet.</h4>
-         <span> </span>
-         <p>Cas vstibulum </p>
-         </div>
-     </div>
-     <div class="clearfix"></div>
-   </div>
-   <div class="home_main">
-      <div class="col-md-5 col-sm-5 col-xs-5 img3 img-grid ">
-         <div class="img_text_w3ls text-center">
-         <h4>Eget Integer sit amet.</h4>
-         <span> </span>
-         <p>Asid Estibulum </p>
-         </div>
-     </div>
-     <div class="col-md-7 col-sm-7 col-xs-7 img4 img-grid">
-         <div class="img_text_w3ls text-center">
-         <h4>Eget Integer sit amet.</h4>
-         <span> </span>
-         <p>Cras vestibulum </p>
-       </div>
+          <h4>big title 1</h4>
+          <span> </span>
+          <p>small title</p>
+        </div>
+      </div>
+      <div class="col-md-5 img2 col-sm-5 col-xs-5 img-grid">
+        <div class="img_text_w3ls text-center">
+          <h4>big title 2</h4>
+          <span> </span>
+          <p>small title</p>
+        </div>
+      </div>
+      <!-- Parallax Break-->
+      <div class="clearfix"></div>
     </div>
-   <div class="clearfix"></div>
-   </div>
+    <div class="home_main">
+      <div class="col-md-5 col-sm-5 col-xs-5 img3 img-grid ">
+        <div class="img_text_w3ls text-center">
+          <h4>big title 3</h4>
+          <span> </span>
+          <p> small title</p>
+        </div>
+      </div>
+      <div class="col-md-7 col-sm-7 col-xs-7 img4 img-grid">
+        <div class="img_text_w3ls text-center">
+          <h4>big title 4</h4>
+          <span> </span>
+          <p> small title </p>
+        </div>
+      </div>
+      <!-- Parallax Break-->
+      <div class="clearfix"></div>
+    </div>
     <div class="home_main">
       <div class="col-md-7 col-sm-7 col-xs-7 img-grid  img5">
-       <div class="img_text_w3ls text-center">
-         <h4>Eget Integer sit amet.</h4>
-         <span> </span>
-         <p>Cras vestibulum </p>
-       </div>
+        <div class="img_text_w3ls text-center">
+          <h4>big title 4</h4>
+          <span> </span>
+          <p> small title </p>
+        </div>
       </div>
-     <div class="col-md-5 col-sm-5 col-xs-5 img-grid img6">
-       <div class="img_text_w3ls text-center">
-         <h4>Eget Integer sit amet.</h4>
-         <span> </span>
-         <p>Cras vestibulum </p>
-       </div>
+      <div class="col-md-5 col-sm-5 col-xs-5 img-grid img6">
+        <div class="img_text_w3ls text-center">
+          <h4>big title 5</h4>
+          <span> </span>
+          <p> small title </p>
+        </div>
       </div>
-     <div class="clearfix"></div>
-   </div>
- </div>
- </div>
+      <div class="clearfix"></div>
+    </div>
+  </div><!-- end home_grids_w3-->
+</div><!-- end home_container for parallax boxes-->
