--- a/menu.html
+++ b/menu.html
@@ -6,14 +6,36 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
     </button>
-  <div class="collapse navbar-collapse top-nav w3l" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav linkEffects linkHoverEffect_11 custom-menu">
-      <li class="agile_active"><a href="howcilly.github.io/" class="scroll"><span>home</span></a></li>
-      <li><a href="#about" class="scroll"><span>about us</span></a></li>
-      <li><a href="#gallery" class="scroll"><span>gallery </span></a></li>
-      <li><a href="#team" class="scroll"><span>team</span></a></li>
-      <li><a href="#contact" class="scroll"><span>Contact</span></a></li>
-    </ul>
-  </div>
+    <!-- navBar construct-->
+    <div class="collapse navbar-collapse top-nav w3l" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav linkEffects linkHoverEffect_11 custom-menu">
+        <li>
+          <a href="howcilly.github.io/" class="scroll">
+            <span>home</span>
+          </a>
+        </li>
+        <li>
+          <a href="#about" class="scroll">
+            <span>about</span>
+          </a>
+        </li>
+        <li>
+          <a href="#gallery" class="scroll">
+            <span>gallery</span>
+          </a>
+        </li>
+        <li>
+          <a href="#team" class="scroll">
+            <span>team</span>
+          </a>
+        </li>
+        <li>
+          <a href="#contact" class="scroll">
+            <span>contact</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <!-- End navBar construct-->
   </div>
 </nav>
