--- a/section.html
+++ b/section.html
@@ -1,7 +1,13 @@
 <div class="w3layouts-section" id="blog">
-  <div class="container">   
-    <h3 class="title">Let the creativity Begin</h3> 
-    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <a href="#myModal" class="agilebtn" data-toggle="modal" data-target="#myModal"><span>Read More</span></a>
+  <div class="container">
+    <h3 class="title">Big title for H3</h3>
+    <p>
+      Short three sentence blurb to prompt reader to read more.
+      Short three sentence blurb to prompt reader to read more.
+      Short three sentence blurb to prompt reader to read more.
+    </p>
+    <a href="#myModal" class="agilebtn" data-toggle="modal" data-target="#myModal">
+      <span>Read More</span>
+    </a>
   </div>
 </div>
