--- a/team.html
+++ b/team.html
@@ -1,47 +1,29 @@
 <div class="team agileits-w3layouts" id="team">
   <div class="container">
-    <h3 class="title">our Team</h3>  
+    <h3 class="title">Teammate comments</h3>
     <div class="team-w3ls">
       <div class="col-md-4 col-sm-4 col-xs-4 team-grid w3_agileits">
         <img class="img-w3l t1-wthree img-responsive" src="images/t1.jpg" alt="">
-        <h5>Mercurio</h5>
-        <p>Lorem ipsum dolor sit amet.Cras rutrum iaculis enim, non convallis felis mattis.</p>
-        <div class="social-icons">
-          <ul>
-            <li><a href="#" class="fa fa-facebook icon icon-border facebook"> </a></li>
-            <li><a href="#" class="fa fa-twitter icon icon-border twitter"> </a></li>
-            <li><a href="#" class="fa fa-google-plus icon icon-border googleplus"> </a></li>
-          </ul>
-          <div class="clearfix"> </div>
-        </div> 
+        <h5>Boss 1</h5>
+        <p>
+          He is a worker that does stuff in a way
+        </p>
       </div>
-      <div class="col-md-4 col-sm-4 col-xs-4 team-grid w3_agileits t2">
+      <div class="col-md-4 col-sm-4 col-xs-4 team-grid w3_agileits">
         <img class="img-w3l t1-wthree img-responsive" src="images/t2.jpg" alt="">
-        <h5>Clifford</h5>
-        <p>Lorem ipsum dolor sit amet.Cras rutrum iaculis enim, non convallis felis mattis.</p>
-        <div class="social-icons">
-          <ul>
-            <li><a href="#" class="fa fa-facebook icon icon-border facebook"> </a></li>
-            <li><a href="#" class="fa fa-twitter icon icon-border twitter"> </a></li>
-            <li><a href="#" class="fa fa-google-plus icon icon-border googleplus"> </a></li>
-          </ul>
-          <div class="clearfix"> </div>
-        </div> 
+        <h5>Boss 2</h5>
+        <p>
+          He is a worker that does stuff in a way
+        </p>
       </div>
-      <div class="col-md-4 col-sm-4 col-xs-4 w3_agileits team-grid">
+      <div class="col-md-4 col-sm-4 col-xs-4 team-grid w3_agileits">
         <img class="img-w3l t1-wthree img-responsive" src="images/t3.jpg" alt="">
-        <h5>Davidson</h5>
-        <p>Lorem ipsum dolor sit amet.Cras rutrum iaculis enim, non convallis felis mattis.</p>
-        <div class="social-icons agile">
-          <ul>
-            <li><a href="#" class="fa fa-facebook icon icon-border facebook"> </a></li>
-            <li><a href="#" class="fa fa-twitter icon icon-border twitter"> </a></li>
-            <li><a href="#" class="fa fa-google-plus icon icon-border googleplus"> </a></li>
-          </ul>
-          <div class="clearfix"> </div>
-        </div> 
+        <h5>Boss 3</h5>
+        <p>
+          He is a worker that does stuff in a way
+        </p>
       </div>
       <div class="clearfix"> </div>
-    </div>   
+    </div>
   </div>
 </div>
