update broken photo space
updated banner and index

--- a/banner.html
+++ b/banner.html
@@ -5,21 +5,21 @@
         <ul class="rslides callbacks callbacks1" id="slider4">
           <li>
             <div class="banner_text_w3layouts">
-              <h3>Healine 1.</h3>
+              <h3>Headline 1.</h3>
               <span> </span>
               <p>smaller sub headline </p>
             </div>
           </li>
           <li>
             <div class="banner_text_w3layouts">
-              <h3>Healine 2.</h3>
+              <h3>Headline 2.</h3>
               <span> </span>
               <p>smaller sub headline </p>
             </div>
           </li>
           <li>
             <div class="banner_text_w3layouts">
-              <h3>Healine 3.</h3>
+              <h3>Headline 3.</h3>
               <span> </span>
               <p>smaller sub headline </p>
             </div>
