--- a/index.html
+++ b/index.html
@@ -44,7 +44,43 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
 <div class="agileits_main">
 <!-- header -->
+<div class="w3_agile_logo">
+  <h1 class="text-center">
+    <a href="index.html">How Cilly</a>
+  </h1>
+</div>
 <!-- banner -->
+<div class="w3_banner"><!-- start banner-->
+  <div class="container"><!-- start container-->
+    <div class="slider"><!-- Start Slider -->
+      <div class="callbacks_container"><!-- start callbacks container-->
+        <ul class="rslides callbacks callbacks1" id="slider4">
+          <li>
+            <div class="banner_text_w3layouts">
+              <h3>Headline 1.</h3>
+              <span> </span>
+              <p>smaller sub headline </p>
+            </div>
+          </li>
+          <li>
+            <div class="banner_text_w3layouts">
+              <h3>Headline 2.</h3>
+              <span> </span>
+              <p>smaller sub headline </p>
+            </div>
+          </li>
+          <li>
+            <div class="banner_text_w3layouts">
+              <h3>Headline 3.</h3>
+              <span> </span>
+              <p>smaller sub headline </p>
+            </div>
+          </li>
+        </ul>
+      </div><!-- end callbacks container-->
+    </div><!-- End Slider -->
+  </div><!-- end container-->
+</div><!-- end banner-->
 <!-- menu -->
 <nav class="navbar navbar-inverse ">
   <div class="container">
