--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
 <div class="agileits_main">
 <!-- header -->
-<div class="w3_agile_logo">
+<!-- <div class="w3_agile_logo">
   <h1 class="text-center">
     <a href="index.html">How Cilly</a>
   </h1>
-</div>
+</div> -->
 <!-- banner -->
 <div class="w3_banner"><!-- start banner-->
   <div class="container"><!-- start container-->
