--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="en">
 <head>
 <title>
-  howcilly.github
+  howcilly&#46;github&#46;io
 </title>
 <!-- custom-theme -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -57,23 +57,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <ul class="rslides callbacks callbacks1" id="slider4">
           <li>
             <div class="banner_text_w3layouts">
-              <h3>Headline 1.</h3>
+              <h3>Junior level SWE I</h3>
               <span> </span>
-              <p>smaller sub headline </p>
+              <p>Software Quality&#44; Test&#44; and Application Development Engineer</p>
             </div>
           </li>
           <li>
             <div class="banner_text_w3layouts">
-              <h3>Headline 2.</h3>
+              <h3>IT Guy</h3>
               <span> </span>
-              <p>smaller sub headline </p>
+              <p>Comparable to ITIL V3 Foundations Engineer</p>
             </div>
           </li>
           <li>
             <div class="banner_text_w3layouts">
-              <h3>Headline 3.</h3>
+              <h3>Computer Science Engineer</h3>
               <span> </span>
-              <p>smaller sub headline </p>
+              <p>Developer&#44; Coder&#44; Programmer&#44; and Computer Guru</p>
             </div>
           </li>
         </ul>
@@ -126,17 +126,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </li>
         <li>
           <a href="#gallery" class="scroll">
-            <span>gallery</span>
+            <span>repositories</span>
           </a>
         </li>
         <li>
-          <a href="#team" class="scroll">
-            <span>team</span>
-          </a>
-        </li>
-        <li>
-          <a href="#contact" class="scroll">
-            <span>contact</span>
+          <a href="#mentions" class="scroll">
+            <span>mentions</span>
           </a>
         </li>
       </ul>
@@ -146,81 +141,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </nav>
 <!-- menu -->
 </div><!-- end agileits_main-->
-<!-- banner -->  
-<!-- home -->
-<div class="home_ w3layouts">
-  <div class="home_grids_w3">
-    <div class="home_main">
-      <div class="col-md-7 col-sm-7 col-xs-7 img1 img-grid">
-        <div class="img_text_w3ls text-center">
-          <h4>big title 1</h4>
-          <span> </span>
-          <p>small title</p>
-        </div>
-      </div>
-      <div class="col-md-5 img2 col-sm-5 col-xs-5 img-grid">
-        <div class="img_text_w3ls text-center">
-          <h4>big title 2</h4>
-          <span> </span>
-          <p>small title</p>
-        </div>
-      </div>
-      <!-- Parallax Break-->
-      <div class="clearfix"></div>
-    </div>
-    <div class="home_main">
-      <div class="col-md-5 col-sm-5 col-xs-5 img3 img-grid ">
-        <div class="img_text_w3ls text-center">
-          <h4>big title 3</h4>
-          <span> </span>
-          <p> small title</p>
-        </div>
-      </div>
-      <div class="col-md-7 col-sm-7 col-xs-7 img4 img-grid">
-        <div class="img_text_w3ls text-center">
-          <h4>big title 4</h4>
-          <span> </span>
-          <p> small title </p>
-        </div>
-      </div>
-      <!-- Parallax Break-->
-      <div class="clearfix"></div>
-    </div>
-    <div class="home_main">
-      <div class="col-md-7 col-sm-7 col-xs-7 img-grid  img5">
-        <div class="img_text_w3ls text-center">
-          <h4>big title 4</h4>
-          <span> </span>
-          <p> small title </p>
-        </div>
-      </div>
-      <div class="col-md-5 col-sm-5 col-xs-5 img-grid img6">
-        <div class="img_text_w3ls text-center">
-          <h4>big title 5</h4>
-          <span> </span>
-          <p> small title </p>
-        </div>
-      </div>
-      <div class="clearfix"></div>
-    </div>
-  </div><!-- end home_grids_w3-->
-</div><!-- end home_container for parallax boxes-->
-<!-- home -->
 <!-- about -->
 <div class="about_agileinfo" id="about"><!-- hyperlink #about connects to this id-->
   <div class="container">
-    <h3 class="title">About Section</h3>
+    <h3 class="title">Mr E&#46; discography</h3>
     <div class="about_main">
       <div class="col-md-6 col-sm-6 col-xs-6 about_agileits"></div>
       <div class="col-md-6 col-sm-6 col-xs-6 about_text_w3l">
-        <h4>Mr E. discography</h4>
+        <h4>A bit about me</h4>
         <p>
-          This paragraph details things about my career and stuff.
-          This paragraph details things about my career and stuff.
-          This paragraph details things about my career and stuff.
-          This paragraph details things about my career and stuff.
-          This paragraph details things about my career and stuff.
-          This paragraph details things about my career and stuff.
+          As an electronics and computer science engineer&#44; 
+          I have worked on designing&#44; building&#44; and testing electronic 
+          equipment such as audio-visual&#44; communication&#44; computer&#44; 
+          and network systems&#46; My current experience is in programming&#44; 
+          testing&#44; and designing FPGA components&#46;  Some of my preferred
+          languages are C&#44; C&#43;&#43;&#44; C&#35;&#44; VHDL&#44; and SQL&#47;T&#45;SQL&#46;
         </p>
       </div>
       <div class="clearfix"></div>
@@ -231,14 +166,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- gallery -->
 <div class="gallery_wthree" id="gallery">
   <div class="container">
-    <h3 class="title">Repo List</h3>
+    <h3 class="title">Links to Repositories</h3>
     <div class="gallery_grid agileits_w3layouts">
       <div class="col-md-6  col-sm-6 col-xs-6 grid_w3">
         <div class="grid-1">
           <a class="cm-overlay" href="images/2.jpg">
             <img src="images/2.jpg" alt=" " class="img-responsive" />
             <div class="w3agile-text w3agile-text-smal1">
-              <h5>pop up label</h5>
+              <h5>Automated House Keeping</h5>
             </div>
           </a>
         </div>
@@ -247,7 +182,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <a class="cm-overlay" href="images/14.jpg">
               <img src="images/14.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-small">
-                <h5>pop up label</h5>
+                <h5>C Samples</h5>
               </div>
             </a>
           </div>
@@ -255,7 +190,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <a class="cm-overlay" href="images/13.jpg">
               <img src="images/13.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-smal1">
-                <h5>pop up label</h5>
+                <h5>C&#43;&#43; Samples</h5>
               </div>
             </a>
           </div>
@@ -268,7 +203,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <a class="cm-overlay" href="images/15.jpg">
               <img src="images/15.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-small">
-                <h5>pop up label</h5>
+                <h5>C&#35; Samples</h5>
               </div>
             </a>
           </div>
@@ -276,7 +211,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <a class="cm-overlay" href="images/16.jpg">
               <img src="images/16.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-smal1">
-                <h5>pop up label</h5>
+                <h5>VHDL Samples</h5>
               </div>
             </a>
           </div>
@@ -286,7 +221,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <a class="cm-overlay" href="images/17.jpg">
             <img src="images/17.jpg" alt=" " class="img-responsive" />
             <div class="w3agile-text w3agile-text-smal1">
-                <h5>pop up label</h5>
+                <h5>SQL&#47;T&#45;SQL Samples</h5>
             </div>
           </a>
         </div>
@@ -311,10 +246,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <!-- A cool profile photo goes here-->
           <img src="images/7.jpg" alt="image">
           <p><!-- Read more about me and my creative side-->
-            A paragraph or blurb detailing my creative side.
-            Or even something about something you know.
-            Or even something about something you know.
-            Or even something about something you know.
+            A paragraph or blurb detailing my creative side&#46;
+            Or even something about something you know&#46;
+            Or even something about something you know&#46;
+            Or even something about something you know&#46;
           </p>
         </div>
       </div>
@@ -325,11 +260,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- section -->
 <div class="w3layouts-section" id="blog">
   <div class="container">
-    <h3 class="title">Big title for H3</h3>
+    <h3 class="title">In my quest to be a bit Peddler</h3>
     <p>
-      Short three sentence blurb to prompt reader to read more.
-      Short three sentence blurb to prompt reader to read more.
-      Short three sentence blurb to prompt reader to read more.
+      I believe my training&#44; experience&#44; and proven ability 
+      as an Electronics and Computer Science Engineer will 
+      allow me to significantly contribute to the productivity 
+      and quality of your company&#46; In reviewing my resume&#44; you 
+      will note that I have acquired some bytes valuable experience&#46;
     </p>
     <a href="#myModal" class="agilebtn" data-toggle="modal" data-target="#myModal">
       <span>Read More</span>
@@ -337,37 +274,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div>
 </div>
 <!-- section --> 
-<!--team -->
-<div class="team agileits-w3layouts" id="team">
+<!--mentions -->
+<div class="team agileits-w3layouts" id="mentions">
   <div class="container">
     <h3 class="title">Teammate comments</h3>
     <div class="team-w3ls">
       <div class="col-md-4 col-sm-4 col-xs-4 team-grid w3_agileits">
         <img class="img-w3l t1-wthree img-responsive" src="images/t1.jpg" alt="">
-        <h5>Boss 1</h5>
+        <h5>Bendix King &#45 Manager</h5>
         <p>
-          He is a worker that does stuff in a way
+          He is like a computer scienctist&#33;
         </p>
       </div>
       <div class="col-md-4 col-sm-4 col-xs-4 team-grid w3_agileits">
         <img class="img-w3l t1-wthree img-responsive" src="images/t2.jpg" alt="">
-        <h5>Boss 2</h5>
+        <h5>Fidelity &#45 Team Lead</h5>
         <p>
-          He is a worker that does stuff in a way
+          Hey can you check out this script I wrote&#63;
         </p>
       </div>
       <div class="col-md-4 col-sm-4 col-xs-4 team-grid w3_agileits">
         <img class="img-w3l t1-wthree img-responsive" src="images/t3.jpg" alt="">
-        <h5>Boss 3</h5>
+        <h5>NMSU Capstone &#45 Team Mentor</h5>
         <p>
-          He is a worker that does stuff in a way
+          He is really good with software&#33;
         </p>
       </div>
       <div class="clearfix"> </div>
     </div>
   </div>
 </div>
-<!-- team--> 
+<!-- mentions--> 
 <!-- copy-right -->
 <div class="copy-right agileits-w3layouts">
   <div class="container">
