--- a/index.html
+++ b/index.html
@@ -246,10 +246,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <!-- A cool profile photo goes here-->
           <img src="images/7.jpg" alt="image">
           <p><!-- Read more about me and my creative side-->
-            A paragraph or blurb detailing my creative side&#46;
-            Or even something about something you know&#46;
-            Or even something about something you know&#46;
-            Or even something about something you know&#46;
+            I bet you thought this was link to my resume&#43; &#58;&#41;
+            Sometimes you don&#39;t know what you don&#39; know
+            until you get down to it and get going&#33;
           </p>
         </div>
       </div>
