--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="w3_banner"><!-- start banner-->
   <div class="container"><!-- start container-->
     <div class="slider"><!-- Start Slider -->
-      <div class="callbacks_container"><!-- start callbacks container-->
+      <!-- <div class="callbacks_container"> --><!-- start callbacks container-->
         <ul class="rslides callbacks callbacks1" id="slider4">
           <li>
             <div class="banner_text_w3layouts">
@@ -77,7 +77,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
           </li>
         </ul>
-      </div><!-- end callbacks container-->
+      <!-- </div> --><!-- end callbacks container-->
       <script src="js/responsiveslides.min.js"></script>
       <script>
       // You can also use "$(window).load(function() {"
@@ -154,8 +154,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           I have worked on designing&#44; building&#44; and testing electronic 
           equipment such as audio-visual&#44; communication&#44; computer&#44; 
           and network systems&#46; My current experience is in programming&#44; 
-          testing&#44; and designing FPGA components&#46;  Some of my preferred
-          languages are C&#44; C&#43;&#43;&#44; C&#35;&#44; VHDL&#44; and SQL&#47;T&#45;SQL&#46;
+          testing&#44; and designing software components&#46;  Some of my preferred
+          languages are C&#44; C&#43;&#43;&#44; C&#35;&#44; VHDL&#44; and 
+          SQL&#47;T&#45;SQL&#46;
         </p>
       </div>
       <div class="clearfix"></div>
