--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       as an Electronics and Computer Science Engineer will 
       allow me to significantly contribute to the productivity 
       and quality of your company&#46; In reviewing my resume&#44; you 
-      will note that I have acquired some bytes valuable experience&#46;
+      will note that I have acquired some valuable experience&#46;
     </p>
     <a href="#myModal" class="agilebtn" data-toggle="modal" data-target="#myModal">
       <span>Read More</span>
