--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </a>
         </li>
         <li>
-          <a href="#gallery" class="scroll">
+          <a href="#repo" class="scroll">
             <span>repositories</span>
           </a>
         </li>
@@ -162,32 +162,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div>
 </div>
 <!-- about -->
-<!-- gallery -->
-<div class="gallery_wthree" id="gallery">
+<!-- repo -->
+<div class="repo_wthree" id="repo">
   <div class="container">
     <h3 class="title">Links to Repositories</h3>
-    <div class="gallery_grid agileits_w3layouts">
+    <div class="repo_grid agileits_w3layouts">
       <div class="col-md-6  col-sm-6 col-xs-6 grid_w3">
         <div class="grid-1">
-          <a class="cm-overlay" href="images/2.jpg">
-            <img src="images/2.jpg" alt=" " class="img-responsive" />
+          <a class="cm-overlay" href="https://github.com/howcilly/AutomatedHouseKeeping">
+            <img src="*/2.jpg" alt=" " class="img-responsive" />
             <div class="w3agile-text w3agile-text-smal1">
               <h5>Automated House Keeping</h5>
             </div>
           </a>
         </div>
-        <div class="sub_grid gallery_w3l">
+        <div class="sub_grid repo_w3l">
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-c grid_w3l">
-            <a class="cm-overlay" href="images/14.jpg">
-              <img src="images/14.jpg" alt=" " class="img-responsive" />
+            <a class="cm-overlay" href="https://github.com/howcilly/14.jpg">
+              <img src="https://github.com/howcilly/14.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-small">
                 <h5>C Samples</h5>
               </div>
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-b grid_w3l">
-            <a class="cm-overlay" href="images/13.jpg">
-              <img src="images/13.jpg" alt=" " class="img-responsive" />
+            <a class="cm-overlay" href="https://github.com/howcilly/13.jpg">
+              <img src="https://github.com/howcilly/13.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-smal1">
                 <h5>C&#43;&#43; Samples</h5>
               </div>
@@ -199,16 +199,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="col-md-6 col-sm-6 col-xs-6 grid_w3">
         <div class="sub_grid">
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-c grid_w3l">
-            <a class="cm-overlay" href="images/15.jpg">
-              <img src="images/15.jpg" alt=" " class="img-responsive" />
+            <a class="cm-overlay" href="https://github.com/howcilly/15.jpg">
+              <img src="https://github.com/howcilly/15.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-small">
                 <h5>C&#35; Samples</h5>
               </div>
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-d grid_w3l">
-            <a class="cm-overlay" href="images/16.jpg">
-              <img src="images/16.jpg" alt=" " class="img-responsive" />
+            <a class="cm-overlay" href="https://github.com/howcilly/16.jpg">
+              <img src="https://github.com/howcilly/16.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-smal1">
                 <h5>VHDL Samples</h5>
               </div>
@@ -217,8 +217,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="clearfix"></div>
         </div>
         <div class="grid-1 grid-2">
-          <a class="cm-overlay" href="images/17.jpg">
-            <img src="images/17.jpg" alt=" " class="img-responsive" />
+          <a class="cm-overlay" href="https://github.com/howcilly/17.jpg">
+            <img src="https://github.com/howcilly/17.jpg" alt=" " class="img-responsive" />
             <div class="w3agile-text w3agile-text-smal1">
                 <h5>SQL&#47;T&#45;SQL Samples</h5>
             </div>
@@ -230,7 +230,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
   </div>
 </div>
-<!-- gallery -->
+<!-- repo -->
 <!-- Tooltip -->
 <!-- Container for blurb popup from read more button in section-->
 <div class="tooltip-content">
@@ -243,7 +243,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="modal-body">
           <!-- A cool profile photo goes here-->
-          <img src="images/7.jpg" alt="image">
+          <img src="https://github.com/howcilly/7.jpg" alt="image">
           <p><!-- Read more about me and my creative side-->
             I bet you thought this was link to my resume&#46; &#58;&#41;
             Sometimes you don&#39;t know what you don&#39;t know
@@ -278,21 +278,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <h3 class="title">Teammate comments</h3>
     <div class="team-w3ls">
       <div class="col-md-4 col-sm-4 col-xs-4 team-grid w3_agileits">
-        <img class="img-w3l t1-wthree img-responsive" src="images/t1.jpg" alt="">
+        <img class="img-w3l t1-wthree img-responsive" src="https://github.com/howcilly/t1.jpg" alt="">
         <h5>Bendix King &#45 Manager</h5>
         <p>
           He is like a computer scienctist&#33;
         </p>
       </div>
       <div class="col-md-4 col-sm-4 col-xs-4 team-grid w3_agileits">
-        <img class="img-w3l t1-wthree img-responsive" src="images/t2.jpg" alt="">
+        <img class="img-w3l t1-wthree img-responsive" src="https://github.com/howcilly/t2.jpg" alt="">
         <h5>Fidelity &#45 Team Lead</h5>
         <p>
           Hey can you check out this script I wrote&#63;
         </p>
       </div>
       <div class="col-md-4 col-sm-4 col-xs-4 team-grid w3_agileits">
-        <img class="img-w3l t1-wthree img-responsive" src="images/t3.jpg" alt="">
+        <img class="img-w3l t1-wthree img-responsive" src="https://github.com/howcilly/t3.jpg" alt="">
         <h5>NMSU Capstone &#45 Team Mentor</h5>
         <p>
           He is really good with software&#33;
@@ -321,7 +321,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div>
 </div>
 <!-- copy-right -->
-<!-- Gallery-plugin -->
+<!-- repo-plugin -->
 <script src="js/jquery.mobile.custom.min.js"></script>
 <script src="js/jquery.cm-overlay.js"></script>
     <script>
@@ -329,7 +329,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         $('.cm-overlay').cmOverlay();
       });
     </script>
-<!-- Gallery-plugin -->
+<!-- repo-plugin -->
 <!-- start-smooth-scrolling -->
 <script type="text/javascript" src="js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>  
