--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="col-md-6  col-sm-6 col-xs-6 grid_w3">
         <div class="grid-1">
           <a class="cm-overlay" href="https://github.com/howcilly/AutomatedHouseKeeping">
-            <img src="*/2.jpg" alt=" " class="img-responsive" />
+            <img src="https://github.com/howcilly/2.jpg" alt=" " class="img-responsive" />
             <div class="w3agile-text w3agile-text-smal1">
               <h5>Automated House Keeping</h5>
             </div>
@@ -178,16 +178,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="sub_grid repo_w3l">
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-c grid_w3l">
-            <a class="cm-overlay" href="https://github.com/howcilly/14.jpg">
-              <img src="https://github.com/howcilly/14.jpg" alt=" " class="img-responsive" />
+            <a class="cm-overlay" href="https://github.com/howcilly/C_Samples">
+              <img src="images/14.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-small">
                 <h5>C Samples</h5>
               </div>
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-b grid_w3l">
-            <a class="cm-overlay" href="https://github.com/howcilly/13.jpg">
-              <img src="https://github.com/howcilly/13.jpg" alt=" " class="img-responsive" />
+            <a class="cm-overlay" href="https://github.com/howcilly/C&#43;&#43;Samples">
+              <img src="images/13.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-smal1">
                 <h5>C&#43;&#43; Samples</h5>
               </div>
@@ -199,16 +199,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="col-md-6 col-sm-6 col-xs-6 grid_w3">
         <div class="sub_grid">
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-c grid_w3l">
-            <a class="cm-overlay" href="https://github.com/howcilly/15.jpg">
-              <img src="https://github.com/howcilly/15.jpg" alt=" " class="img-responsive" />
+            <a class="cm-overlay" href="https://github.com/howcilly/C&#35;Samples">
+              <img src="images/15.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-small">
                 <h5>C&#35; Samples</h5>
               </div>
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-d grid_w3l">
-            <a class="cm-overlay" href="https://github.com/howcilly/16.jpg">
-              <img src="https://github.com/howcilly/16.jpg" alt=" " class="img-responsive" />
+            <a class="cm-overlay" href="https://github.com/howcilly/VHDL_Examples">
+              <img src="images/16.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-smal1">
                 <h5>VHDL Samples</h5>
               </div>
@@ -217,8 +217,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="clearfix"></div>
         </div>
         <div class="grid-1 grid-2">
-          <a class="cm-overlay" href="https://github.com/howcilly/17.jpg">
-            <img src="https://github.com/howcilly/17.jpg" alt=" " class="img-responsive" />
+            <a class="cm-overlay" href="https://github.com/howcilly/TSQL_Examples">
+            <img src="images/17.jpg" alt=" " class="img-responsive" />
             <div class="w3agile-text w3agile-text-smal1">
                 <h5>SQL&#47;T&#45;SQL Samples</h5>
             </div>
@@ -243,7 +243,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="modal-body">
           <!-- A cool profile photo goes here-->
-          <img src="https://github.com/howcilly/7.jpg" alt="image">
+          <img src="images/7.jpg" alt="image">
           <p><!-- Read more about me and my creative side-->
             I bet you thought this was link to my resume&#46; &#58;&#41;
             Sometimes you don&#39;t know what you don&#39;t know
@@ -278,21 +278,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <h3 class="title">Teammate comments</h3>
     <div class="team-w3ls">
       <div class="col-md-4 col-sm-4 col-xs-4 team-grid w3_agileits">
-        <img class="img-w3l t1-wthree img-responsive" src="https://github.com/howcilly/t1.jpg" alt="">
+        <img class="img-w3l t1-wthree img-responsive" src="images/t1.jpg" alt="">
         <h5>Bendix King &#45 Manager</h5>
         <p>
           He is like a computer scienctist&#33;
         </p>
       </div>
       <div class="col-md-4 col-sm-4 col-xs-4 team-grid w3_agileits">
-        <img class="img-w3l t1-wthree img-responsive" src="https://github.com/howcilly/t2.jpg" alt="">
+        <img class="img-w3l t1-wthree img-responsive" src="images/t2.jpg" alt="">
         <h5>Fidelity &#45 Team Lead</h5>
         <p>
           Hey can you check out this script I wrote&#63;
         </p>
       </div>
       <div class="col-md-4 col-sm-4 col-xs-4 team-grid w3_agileits">
-        <img class="img-w3l t1-wthree img-responsive" src="https://github.com/howcilly/t3.jpg" alt="">
+        <img class="img-w3l t1-wthree img-responsive" src="images/t3.jpg" alt="">
         <h5>NMSU Capstone &#45 Team Mentor</h5>
         <p>
           He is really good with software&#33;
