--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </a>
         </li>
         <li>
-          <a href="#repo" class="scroll">
+          <a href="#gallery" class="scroll">
             <span>repositories</span>
           </a>
         </li>
@@ -162,23 +162,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div>
 </div>
 <!-- about -->
-<!-- repo -->
-<div class="repo_wthree" id="repo">
+<!-- gallery -->
+<div class="gallery_wthree" id="gallery">
   <div class="container">
     <h3 class="title">Links to Repositories</h3>
-    <div class="repo_grid agileits_w3layouts">
+    <div class="gallery_grid agileits_w3layouts">
       <div class="col-md-6  col-sm-6 col-xs-6 grid_w3">
         <div class="grid-1">
-          <a class="cm-overlay" href="https://github.com/howcilly/AutomatedHouseKeeping">
-            <img src="https://github.com/howcilly/2.jpg" alt=" " class="img-responsive" />
+          <a class="cm-overlay" href="images/2.jpg">
+            <img src="images/2.jpg" alt=" " class="img-responsive" />
             <div class="w3agile-text w3agile-text-smal1">
               <h5>Automated House Keeping</h5>
             </div>
           </a>
         </div>
-        <div class="sub_grid repo_w3l">
+        <div class="sub_grid gallery_w3l">
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-c grid_w3l">
-            <a class="cm-overlay" href="https://github.com/howcilly/C_Samples">
+            <a class="cm-overlay" href="images/14.jpg">
               <img src="images/14.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-small">
                 <h5>C Samples</h5>
@@ -186,7 +186,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-b grid_w3l">
-            <a class="cm-overlay" href="https://github.com/howcilly/C&#43;&#43;Samples">
+            <a class="cm-overlay" href="images/13.jpg">
               <img src="images/13.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-smal1">
                 <h5>C&#43;&#43; Samples</h5>
@@ -199,7 +199,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="col-md-6 col-sm-6 col-xs-6 grid_w3">
         <div class="sub_grid">
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-c grid_w3l">
-            <a class="cm-overlay" href="https://github.com/howcilly/C&#35;Samples">
+            <a class="cm-overlay" href="images/15.jpg">
               <img src="images/15.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-small">
                 <h5>C&#35; Samples</h5>
@@ -207,7 +207,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-d grid_w3l">
-            <a class="cm-overlay" href="https://github.com/howcilly/VHDL_Examples">
+            <a class="cm-overlay" href="images/16.jpg">
               <img src="images/16.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-smal1">
                 <h5>VHDL Samples</h5>
@@ -217,7 +217,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="clearfix"></div>
         </div>
         <div class="grid-1 grid-2">
-            <a class="cm-overlay" href="https://github.com/howcilly/TSQL_Examples">
+          <a class="cm-overlay" href="images/17.jpg">
             <img src="images/17.jpg" alt=" " class="img-responsive" />
             <div class="w3agile-text w3agile-text-smal1">
                 <h5>SQL&#47;T&#45;SQL Samples</h5>
@@ -230,7 +230,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
   </div>
 </div>
-<!-- repo -->
+<!-- gallery -->
 <!-- Tooltip -->
 <!-- Container for blurb popup from read more button in section-->
 <div class="tooltip-content">
@@ -321,7 +321,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div>
 </div>
 <!-- copy-right -->
-<!-- repo-plugin -->
+<!-- Gallery-plugin -->
 <script src="js/jquery.mobile.custom.min.js"></script>
 <script src="js/jquery.cm-overlay.js"></script>
     <script>
@@ -329,7 +329,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         $('.cm-overlay').cmOverlay();
       });
     </script>
-<!-- repo-plugin -->
+<!-- Gallery-plugin -->
 <!-- start-smooth-scrolling -->
 <script type="text/javascript" src="js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>  
