--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="gallery_grid agileits_w3layouts">
       <div class="col-md-6  col-sm-6 col-xs-6 grid_w3">
         <div class="grid-1">
-          <a class="cm-overlay" href="images/2.jpg">
+          <a class="cm-overlay" href="https://github.com/howcilly/C_Samples/">
             <img src="images/2.jpg" alt=" " class="img-responsive" />
             <div class="w3agile-text w3agile-text-smal1">
               <h5>Automated House Keeping</h5>
