--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="sub_grid gallery_w3l">
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-c grid_w3l">
-            <a class="cm-overlay" href="images/14.jpg">
+            <a href="https://github.com/howcilly/C_Samples">
               <img src="images/14.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-small">
                 <h5>C Samples</h5>
@@ -186,7 +186,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-b grid_w3l">
-            <a class="cm-overlay" href="images/13.jpg">
+            <a href="https://github.com/howcilly/CPP_Samples">
               <img src="images/13.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-smal1">
                 <h5>C&#43;&#43; Samples</h5>
@@ -199,7 +199,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="col-md-6 col-sm-6 col-xs-6 grid_w3">
         <div class="sub_grid">
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-c grid_w3l">
-            <a class="cm-overlay" href="images/15.jpg">
+            <a href="https://github.com/howcilly/CSharp_Samples">
               <img src="images/15.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-small">
                 <h5>C&#35; Samples</h5>
@@ -207,7 +207,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </a>
           </div>
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-d grid_w3l">
-            <a class="cm-overlay" href="images/16.jpg">
+            <a href="https://github.com/howcilly/VHDL_Samples">
               <img src="images/16.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-smal1">
                 <h5>VHDL Samples</h5>
@@ -217,7 +217,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="clearfix"></div>
         </div>
         <div class="grid-1 grid-2">
-          <a class="cm-overlay" href="images/17.jpg">
+          <a href="https://github.com/howcilly/SQL_T-SQL_Samples">
             <img src="images/17.jpg" alt=" " class="img-responsive" />
             <div class="w3agile-text w3agile-text-smal1">
                 <h5>SQL&#47;T&#45;SQL Samples</h5>
