--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="col-md-6  col-sm-6 col-xs-6 grid_w3">
         <div class="grid-1">
           <a href="https://github.com/howcilly/AutomatedHouseKeeping">
-            <img src="" alt=" " class="img-responsive" />
+            <img src="images/2.jpg" alt=" " class="img-responsive" />
             <div class="w3agile-text w3agile-text-smal1">
               <h5>Automated House Keeping</h5>
             </div>
@@ -144,7 +144,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="sub_grid gallery_w3l">
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-c grid_w3l">
             <a href="https://github.com/howcilly/C_Samples">
-              <img src="" alt=" " class="img-responsive" />
+              <img src="images/14.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-small">
                 <h5>C Samples</h5>
               </div>
@@ -152,7 +152,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </div>
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-b grid_w3l">
             <a href="https://github.com/howcilly/CPP_Samples">
-              <img src="" alt=" " class="img-responsive" />
+              <img src="images/13.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-smal1">
                 <h5>C&#43;&#43; Samples</h5>
               </div>
@@ -165,7 +165,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="sub_grid">
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-c grid_w3l">
             <a href="https://github.com/howcilly/CSharp_Samples">
-              <img src="" alt=" " class="img-responsive" />
+              <img src="images/15.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-small">
                 <h5>C&#35; Samples</h5>
               </div>
@@ -173,7 +173,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </div>
           <div class="col-md-6 col-sm-6 col-xs-6 grid-1 grid-d grid_w3l">
             <a href="https://github.com/howcilly/VHDL_Samples">
-              <img src="" alt=" " class="img-responsive" />
+              <img src="images/16.jpg" alt=" " class="img-responsive" />
               <div class="w3agile-text w3agile-text-smal1">
                 <h5>VHDL Samples</h5>
               </div>
@@ -183,7 +183,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="grid-1 grid-2">
           <a href="https://github.com/howcilly/SQL_T-SQL_Samples">
-            <img src="" alt=" " class="img-responsive" />
+            <img src="images/17.jpg" alt=" " class="img-responsive" />
             <div class="w3agile-text w3agile-text-smal1">
                 <h5>SQL&#47;T&#45;SQL Samples</h5>
             </div>
